Korrekturen aus der Vorlesung vom 2009-12-04
· Satz von Lagrange besser formuliert
· Beweis für Satz 10.3 eingebaut
· Verweis auf den Satz von Lagrange in Text aufgenommen
· In einem Fall musste es \setminus statt \backslash heißen
· Erklärung zu einem Beispiel eingebaut
· Eigenschaften der Faktorgruppe bewiesen
· Set{|} eingebaut

git-svn-id: https://svn.lug-jena.de/uni-skripte@2565 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -3455,7 +3455,7 @@ Dabei gelten folgende Begriffe:
 \begin{satz}[\textsc{Lagrange} 1736--1813]\label{satz:10.1}
   Für jede Untergruppe $H$ einer Gruppe $G$ gilt: $\abs{G} =
   \abs{G\colon H} \cdot \abs{H}$. Im Fall $\abs{G}
-  < \infty$ gilt, $\abs{H}, \abs{G\colon H} \mid \abs{G}$.
+  < \infty$ gilt, $\abs{H}\mid\abs{G}$ und $\abs{G\colon H} \mid \abs{G}$.
   \begin{beweis}
     Jedes Element aus $G$ liegt in genau einer Linksnebenklasse. Es
     gibt genau $\abs{G\colon H}$ Linksnebenklassen und jede enthält
@@ -3486,6 +3486,14 @@ Dabei gelten folgende Begriffe:
   \item $aHa^{-1} = H$ für alle $a \in G$
   \item $aHa^{-1} \subseteq H$ für alle $a \in G$
   \end{enumerate}
+  Dabei ist $aHa^{-1}\coloneqq\Set{aha^{-1} | h\in H}$.
+  \begin{beweis}
+    Für die Richtung (i) nach (ii) muss die Gleichung mit $a^{-1}$ von
+    rechts multipliziert werden. Die Richtung (ii) nach (iii) ist
+    klar, die die Teilmengenbeziehung ist schwächer. Für (iii) nach
+    (i) sei nun $a\in G$. Dann ist $aH=aHa^{-1}a\subseteq Ha=
+    aa^{-1}H(a^{-1})^{-1} \subseteq aH$.
+  \end{beweis}
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -3504,20 +3512,50 @@ Dabei gelten folgende Begriffe:
   \begin{enumerate}[(i)]
   \item Es ist stets $1 \unlhd G$ und $G \unlhd G$. Ist $G \neq 1$ und
     sind $1$, $G$ die einzigen Normalteiler von $G$, so heißt $G$
-    \highl[Gruppe!einfache]{einfache Gruppe}\index{einfach}. Nach
-    \textsc{Lagrange} sind Gruppen von Primzahlordnung einfach.
+    \highl[Gruppe!einfache]{einfache Gruppe}\index{einfach}. Nach dem
+    Satz von
+    \textsc{Lagrange} (\autoref{satz:10.1}) sind Gruppen von Primzahlordnung einfach.
   \item Der Durchschnitt von beliebig vielen Normalteilern ist wieder
     ein Normalteiler.
   \item In einer abelschen Gruppe ist jede Untergruppe normal.
   \item Jede Untergruppe $H$ einer Gruppe $G$ mit $\abs{G\colon H} =
     2$ ist normal, denn die einzigen Links- bzw.\,Rechtsnebenklassen
-    sind $H$ und $G\backslash H$.
+    sind $H$ und $G\setminus H$.
   \item Für $G \coloneqq \Sym(\{1, 2, 3\}) =\colon \Sym(3), a
     \coloneqq \begin{pmatrix}1 & 2 & 3\\ 2 & 3 & 1\end{pmatrix}$ und $b
     \coloneqq \begin{pmatrix}1 & 2 & 3\\ 2 & 1 & 3\end{pmatrix}$ gilt:
     \begin{gather*}
-      \langle a\rangle \unlhd G,  \langle b\rangle \ntrianglelefteq G
+      \langle a\rangle \unlhd G \text{ und }  \langle b\rangle \ntrianglelefteq G
     \end{gather*}
+    Denn es ist $\langle a\rangle=\left\{
+      \begin{pmatrix}
+        1 & 2 & 3\\
+        1 & 2 & 3
+      \end{pmatrix},
+      \begin{pmatrix}
+        1 & 2 & 3\\
+        2 & 3 & 1
+      \end{pmatrix},
+      \begin{pmatrix}
+        1 & 2 & 3\\
+        3 & 1 & 2
+      \end{pmatrix}\right\}$, d.\,h. $\abs{\langle a\rangle}=3$ und
+    $\abs{G\colon\langle a\rangle}=2$. Nach dem obigen Punkt ist somit
+    $\langle a\rangle \unlhd G$. Andererseits ist $\langle b\rangle=
+    \left\{
+      \begin{pmatrix}
+        1 & 2 & 3\\
+        1 & 2 & 3
+      \end{pmatrix},
+      \begin{pmatrix}
+        1 & 2 & 3\\
+        2 & 1 & 3
+      \end{pmatrix}
+    \right\}$. Aber $aba^{-1}=
+    \begin{pmatrix}
+      1 & 2 & 3\\
+      1 & 3 & 2
+    \end{pmatrix}\notin \langle b\rangle$.
   \end{enumerate}
 \end{bsp}
 
@@ -3530,10 +3568,15 @@ Dabei gelten folgende Begriffe:
   \begin{gather*}
     (aN)(bN) \coloneqq abN \qquad (a, b \in G)
   \end{gather*}
+  Das ist wohldefiniert. Denn aus $aN=a'N$ und $bN=b'N$ folgt, $a'=am$
+  und $b'=bn$ mit natürlichen Zahlen $m,n$. Das bedeutet, $a'b'N=
+  ambnN= ab\underbrace{b^{-1}mb}_{\in N}nN= abN$. Die Assoziativität
+  ist klar. Es ist $1_{G/N}= 1_{G}N$ und $(aN)^{-1}= a^{-1}N$ für
+  $a\in G$.
+
   Diese heißt
   \highl[Gruppe!Faktorgruppe]{Faktorgruppe}\index{Faktorgruppe} von
-  $G$ nach $N$.  Dabei ist $1_{G/N} = 1N = N$ und $(aN)^{-1} =
-  a^{-1}N$ für alle $a\in G$. Im Fall $G = \Z$ und $H = 5\Z$ ist z.\,B.
+  $G$ nach $N$. Im Fall $G = \Z$ und $H = 5\Z$ ist z.\,B.
   \begin{gather*}
     G/H = \ZmZ{5} = \{0 + 5\Z, \dotsc, 4 + 5\Z\}
   \end{gather*}
@@ -3570,12 +3613,35 @@ Dabei gelten folgende Begriffe:
   Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow  H$ gilt:
   \begin{enumerate}[(i)]
   \item $U \leq G \Rightarrow f(U) \leq H$; insbesondere ist $\Bld(f)
-    = f(g) \leq H$.
+    = f(G) \leq H$.
   \item $U \unlhd G \Rightarrow f(U) \unlhd f(G)$; aber nicht
     unbedingt $f(U) \unlhd H$.
   \item $V \leq H \Rightarrow f^{-1}(V) \leq G$
   \item $V \unlhd H \Rightarrow f^{-1}(V) \unlhd G$
   \end{enumerate}
+  \begin{beweis}
+    \begin{enumerate}[(i)]
+    \item Wegen $U\neq\emptyset$ ist auch $f(U)\neq\emptyset$. Seien
+      $x,y\in f(U)$. Wir schreiben $x=f(a), y=f(b)$ mit $a,b\in
+      U$. Dann ist $xy^{-1}= f(a)f(b)^{-1}= f(a)f(b^{-1})=
+      f(ab^{-1})$. Da $ab^{-1}\in U$, ist $f(ab^{-1})\in f(U)$.
+    \item Für $u\in U$ und $g\in G$ gilt, $f(g)f(u)f(g)^{-1}=
+      f(gu)f(g^{-1})= f(gug^{-1})$. Mit der obigen Begründung ist auch
+      $f(gug^{-1}) \in f(U)$.
+
+      Sei $G\coloneqq\langle b\rangle=\colon U$ und
+      $H\coloneqq\Sym(3)$ wie oben. Weiter sei $f\colon G\rightarrow
+      H$ mit $x\mapsto x$. Dann ist $U\unlhd G$. Aber $f(U)=G=\langle
+      b\rangle\ntrianglelefteq H$.
+    \item Wegen $f(1_{G})=1_{H}\in V$ ist $1_{G}\in f^{-1}(V)$,
+      d.\,h. $f^{-1}\neq\emptyset$. Seien $a,b\in f^{-1}(V)$,
+      d.\,h. $f(a), f(b)\in V$. Dann haben wir $f(ab^{-1})=
+      f(a)f(b^{-1})= f(a)f(b)^{-1}\in V$, also ist $ab^{-1}\in f^{-1}(V)$.
+    \item Seien $g\in G$ und $a\in f^{-1}(V)$, d.\,h. $f(a)\in
+      V$. Dann ist $f(gag^{-1})= f(g)f(a)f(g)^{-1}$. Da $V\unlhd H$,
+      ist $f(g)f(a)f(g)^{-1}\in V$, also $gag^{-1}\in f^{-1}(V)$.
+    \end{enumerate}
+  \end{beweis}
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -3585,12 +3651,12 @@ Dabei gelten folgende Begriffe:
   Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow H$ gilt
   nach \autoref{satz:10.3}
   \begin{gather*}
-    \ker (f) = f^{-1}(\{1_H\}) = \{a \in G\colon f(a) = 1\} \unlhd G
+    \ker (f) \coloneqq f^{-1}(\{1_H\}) = \Set{a \in G | f(a) = 1} \unlhd G
   \end{gather*}
   Man bezeichnet $\ker (f)$ als \highl{Kern} von $f$. Für $n \in \N$
   und jeden Körper $K$ ist
   \begin{gather*}
-    \SL(n, K) \coloneqq \{A \in \GL(n, K)\colon det(A) = 1\} = \ker
+    \SL(n, K) \coloneqq \Set{A \in \GL(n, K) | det(A) = 1} = \ker
     (det(A)) \unlhd \GL(n, K)
   \end{gather*}
   Man bezeichnet $\SL(n, K)$ als \highl[Gruppe!spezielle
@@ -3617,27 +3683,28 @@ Dabei gelten folgende Begriffe:
 %%%%%%%%%%%%%%%%%%%
 % Satz 10.4
 %%%%%%%%%%%%%%%%%%%
-\begin{satz}\label{satz:10.4}
+\begin{satz}[Korrespondenzsatz]\label{satz:10.4}
   Für jeden Homomorphismus von Gruppen $f\colon G\rightarrow H$ ist
   die Abbildung
   \begin{gather*}
-    \{U\colon \ker (f) \leq U \leq G\} \rightarrow  \{V\colon V \leq
-    \Bld(f)\}, \quad U\mapsto f(U)
+    \Set{U | \ker (f) \leq U \leq G} \rightarrow  \Set{V | V \leq
+    \Bld(f)}, \quad U\mapsto f(U)
   \end{gather*}
   bijektiv mit der Umkehrabbildung $V\mapsto f^{-1}(V)$.
   \begin{beweis}
     Für $U \leq G$ mit $\ker (f) \leq U$ ist $f(U) \leq f(G) =
-    \Bld(f)$ und für $V \leq \Bld(f)$ ist $f^{-1}(V) \leq G$ mit $\ker
-    (f) = f^{-1}(\{1_H\}) \subseteq f^{-1}(V)$.
+    \Bld(f)$ und für $V \leq \Bld(f)\leq H$ ist $f^{-1}(V) \leq G$ mit $\ker
+    (f) = f^{-1}(\{1_H\}) \leq f^{-1}(V)\leq G$.
 
     Somit ist noch zu zeigen: $f^{-1}(f(U)) = U$ und $f(f^{-1}(V)) =
-    V$. Für $x \in f^{-1}(f(U))$ ist $f(x) \in f(U)$, d.\,h. $f(x) =
-    f(u)$ für ein $u \in U$. Dann gilt, $f(x^{-1}u) = f(x^{-1})f(u) = 1$,
-    d.\,h. $x^{-1}u \in \ker (f) \leq U$ und $x^{-1}, x \in U$.  Also:
-    $f^{-1}(f(U)) \subseteq U$.  Sicher ist $U \subseteq
-    f^{-1}(f(U))$ und $(f^{-1}(V)) \subseteq V$.  Sei $v \in
-    V \leq \Bld(f)$.  Schreibe $v = f(y) \in f(f^{-1}(V))$.  Also: $V
-    \subseteq f(f^{-1}(V))$.
+    V$. Sicher ist $U \subseteq f^{-1}(f(U))$ und $f(f^{-1}(V))
+    \subseteq V$. Für $x \in f^{-1}(f(U))$ ist $f(x) \in f(U)$,
+    d.\,h. $f(x) = f(u)$ für ein $u \in U$. Dann gilt, $f(x^{-1}u) =
+    f(x)^{-1}f(u) = 1$, d.\,h. $x^{-1}u \in \ker (f) \leq U$ und
+    $x^{-1}, x \in U$.  Also: $f^{-1}(f(U)) \subseteq U$. Sei $v \in V
+    \leq \Bld(f)$.  Schreibe $v = f(y)$ mit $y\in G$. Dann ist $y \in
+    f^{-1}(V)$ und $v=f(y)\in f(f^{-1}(V))$. Also: $V \subseteq
+    f(f^{-1}(V))$.
   \end{beweis}
 \end{satz}
 
@@ -3650,13 +3717,13 @@ Dabei gelten folgende Begriffe:
   \item Aus \autoref{satz:10.4} folgt, dass für jeden Normalteiler $N$
     einer Gruppe $G$ die Abbildung
     \begin{gather*}
-      \{U\colon N \leq U \leq G\} \rightarrow  \{V\colon V \leq G/N\},
+      \Set{U | N \leq U \leq G} \rightarrow  \Set{V | V \leq G/N},
       \quad U \mapsto U/N
     \end{gather*}
     bijektiv ist, insbesondere hat jede Untergruppe $V$ von $G/N$ die
     Form $V = U/N$ mit einer eindeutig bestimmten Untergruppe $U$ von
-    $G$, die $N$ enthält.  Man zeigt leicht, dass dabei folgendes
-    gilt:
+    $G$, die $N$ enthält. Diesen Fakt werden wir häufig benutzen. Man
+    zeigt leicht, dass dabei folgendes gilt:
     \begin{gather*}
       U \unlhd G \Leftrightarrow U/N \unlhd G/N
     \end{gather*}
