--- a/hempel-info4/skript.latex
+++ b/hempel-info4/skript.latex
@@ -26,7 +26,7 @@
 
 \usepackage{index}
 \usepackage[final]{graphicx}
-\usepackage{color}
+\usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 \usepackage[latin1]{inputenc}
 
