Paket hyphsubst eingebunden
git-svn-id: https://svn.lug-jena.de/uni-skripte@2581 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-lie/skript.latex
+++ b/kuelshammer-lie/skript.latex
@@ -16,6 +16,10 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+                   % Trennmuster, diese korrigieren einige Fehler der alten
+                   % und bieten mehr Trennstellen
+
 \documentclass[ngerman,draft,twoside]{scrreprt}
 \KOMAoptions{parskip=half*}
 \usepackage{ifthen}
