--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -51,6 +51,10 @@
                           % oder solche, die man nicht in LaTeX verwenden
                           % soll -- l2tabu-Checker in LaTeX
 
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+                   % Trennmuster, diese korrigieren einige Fehler der alten
+                   % und bieten mehr Trennstellen
+
 \documentclass[parskip=half*,english,ngerman,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
