--- a/vogel-dml2/dml2.latex
+++ b/vogel-dml2/dml2.latex
@@ -12,6 +12,14 @@
 % von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
 % wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
 
+\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+                   % Befehle oder solche, die man nicht in LaTeX verwenden
+                   % soll -- l2tabu-Checker in LaTeX
+
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+                   % Trennmuster, diese korrigieren einige Fehler der alten
+                   % und bieten mehr Trennstellen
+
 \documentclass[halfparskip*,german,draft,twoside]{scrreprt}
 
 \usepackage[l2tabu,orthodox]{nag}
