--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -15,7 +15,8 @@
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
-%\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
