autorefname für folg und lemm definiert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2595 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hempel-info4/skript.latex
+++ b/hempel-info4/skript.latex
@@ -86,6 +86,8 @@
 \newcommand*{\definiautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
 \newcommand*{\festlautorefname}{Festlegung}
+\newcommand*{\folgautorefname}{Folgerung}
+\newcommand*{\lemmautorefname}{Lemma}
 \renewcommand*{\subsectionautorefname}{Abschnitt}
 \renewcommand*{\subsubsectionautorefname}{Abschnitt}
 
